# DiskGameSaver

./: .gitignore  README.md
disk_game_saver/: Cargo.toml
disk_game_saver/settings/: games_info.toml
disk_game_saver/src/: file_manager.rs  main.rs  spider.rs  toml_parser.rs
disk_game_saver/tests/source_folder/hellos/: hello2.txt
disk_game_saver/tests/target_folder/hellos/: hello2.txt
