[package]
name = "disk_game_saver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# 进行文件操作
fs_extra = "1.3"
# 获取项目根目录
project-root = "0.2"
# 创建带有表达式的全局变量
lazy_static = "1.4"
toml = "0.7"

reqwest = { version = "0.11", features = [ "blocking", "json"] }

serde_json = "1.0"
# iced = "0.9"
slint = "1.0"